2009-06-13  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in (PokerAvatarTestCaseBaseClass):
	Created class.
	(PokerAvatarTestCaseBaseClass.destroyDb,
	(PokerAvatarTestCaseBaseClass.setUpServer,
	(PokerAvatarTestCaseBaseClass.setUpClient,
	(PokerAvatarTestCaseBaseClass.setUp,
	(PokerAvatarTestCaseBaseClass.cleanSessions,
	(PokerAvatarTestCaseBaseClass.tearDown,
	(PokerAvatarTestCaseBaseClass.quit): Moved from
	PokerAvatarTestCase into base class.
	(PokerAvatarTestCase.setUpServer): Rewrote to use base class.
	(PokerAvatarTestCaseBaseClass.createClients): Wrote method; added
	call to it in every test in PokerAvatarTestCase.

2009-06-11  Loic Dachary <loic@dachary.org>

 	* Release 1.7.5

	* pokernetwork/pokerexplain.py, pokernetwork/pokergameclient.py,
	  tests/test-pokerexplain.py.in, tests/test-pokergameclient.py.in:

            The general rule is that PokerExplain will always set the player_list
            according to the content of the InGame packet sent by the server. When
            an InGame packet is received, the player list is stored in the poker
            game. All subsequent calls to buildPlayerList ( happens when
            beginTurn, initRound or _talkedBlindAnte are called ) will use the
            stored value instead of computing it.

            There are three situations to consider when reasoning about the player
            list in the context of a client.

            1) the client receives a batch stream that ends at the blind/ante stage
               it will receive a InGame before the Start packet and the players referenced
               by all the packets sent by the server up to the Stream packet will be consistent.
               Afterwards, if one of the players declined to pay the blinds, the player list may
               be recomputed by the server. It will be sent before moving to the next round and after
               the blind/ante are finished.